<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rents</string>
    <string name="action_settings">Settings</string>
	<string name="reset_btn_text">Anuleaza</string>
		
	<!--  Dialog messages -->
	<string name="wait_for_location_msg">Localizare...</string>
	<string name="enable_location_services_dialog_title">Serviciile de localizare sunt dezactivate</string>
	<string name="enable_location_services_dialog_message">Rents are nevoie de locatia dumneavoastra.</string>
	<string name="enable_nt_location_service_dialog_title">Localizarea prin WIFI/Reteaua mobila este dezactivata</string>
	<string name="enable_nt_location_service_dialog_message">Pentru o localizare mai sigura, va rugam activati.</string>
	
	<!-- Country -->
	<string name="country">Romania</string>

	<!-- Metrics -->
	<string name="currency">€</string>
	<string name="square_meters">mp</string>
	
	<!-- Labels -->
	<string name="rooms_label">camere</string>
	<string name="baths_label">bai</string>
	
	<!-- General menu -->
	<string name="search_action_title">Cauta</string>
	<string name="list_rents_action_title">Cele mai noi</string>
	<string name="user_account_action_title">Contul tau</string>
	<string name="add_to_favorites_action_title">Salveaza</string>
	<string name="signout_action_title">Iesire cont</string>
	
	<!-- User rents activity menu -->
	<string name="add_rent_action_title">Adauga chirie</string>
	<string name="edit_account_action_title">Editeaza cont</string>
	
	<!-- Add rent picture menu -->
	<string name="delete_pic_action_title">Sterge poza</string>
	<string name="browse_pic_action_title">Incarca poza</string>
	<string name="take_pic_action_title">Fotografiaza</string>
	
	<!-- Rent details activity menu -->
	<string name="edit_rent_action_title">Edit</string>

	<!-- Rent details activity -->
	<string name="rent_date_default_text">12 Sep \'13</string>
	<string name="rent_price_default_text">12500 €</string>
	<string name="rent_address_default_text">Str. Simion Barnutiu, Nr. 31, Ap. 18</string>
	<string name="rent_short_desc_default_text">3 cam., 2 bai, 1008 mp</string>
	<string name="rent_type_default_text">Apartament, c-tie. veche</string>
	
	<!-- Filter search activity -->
	<string name="last_location">Ultima locatie</string>
	<string name="current_location">Locatia curenta</string>
	<string name="search_submit_btn_text">Cauta</string>
	<string name="autocomplete_places_input_text">Locatie...</string>
	<string name="rent_price_range_text">Pret</string>
	<string name="rent_surface_range_text">Suprafata</string>
	<string name="pets_allowed_text">Cu animale</string>
	
	<!-- Edit rent activity -->
	<string name="edit_rent_btn_text">Salveaza</string>
	
	<string-array name="rent_parties">
	    <item>Tert</item>
	    <item>Persoana fizica</item>
        <item>Agentie</item>
    </string-array>
    
	<string-array name="rent_types">
	    <item>Tip imobil</item>
        <item>Apartament</item>
        <item>Casa/Vila</item>
        <item>Spatii comerciale/birouri</item>
    </string-array>
    
	<string-array name="rent_architectures">
	    <item>Compartimentare</item>
        <item>Decomadat</item>
        <item>Nedecomadat</item>
    </string-array>
    
	<string-array name="rent_ages">
	    <item>Vechime</item>
        <item>C-tie. noua</item>
        <item>C-tie. veche</item>
    </string-array>
    
	<string-array name="rent_rooms">
	    <item>Camere</item>
        <item>1 camera</item>
        <item>2 camere</item>
        <item>3 camere</item>
        <item>4 camere</item>
        <item>5+ camere</item>
    </string-array>

	<string-array name="rent_baths">
	    <item>Bai</item>
        <item>1 baie</item>
        <item>2 bai</item>
        <item>3 bai</item>
        <item>4+ bai</item>
    </string-array>
    
	<string name="rent_status_available">Disponibila</string>
	<string name="rent_status_unavailable">Indisponibila</string>
	
	<!-- UpgradeAppActivity -->
	<string name="upgrade_app_message">Versiunea curenta nu mai este suportata. Va rugam upgradati.</string>
	<string name="upgrade_app">Upgradeaza</string>

</resources>
